[FEATURE] NEW UI USER PROFILE
